replace internal validation, use external validation

--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -142,7 +142,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="InternalValidation.h" />
+    <ClInclude Include="ExternalValidation.h" />
     <ClInclude Include="K-means.h" />
     <ClInclude Include="Point.h" />
   </ItemGroup>
