--- a/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClInclude Include="K-means.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="InternalValidation.h">
+    <ClInclude Include="ExternalValidation.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
